app/assets/stylesheets/application.scss
/* ... */
.term_suggestions .dropdown-backdrop {
  display: none;
}

.funding-logo {
  width: 100px;
  margin: 15px;
}

.list-card {
  @include floating-card;
  margin: 0 10px 10px 0;
  position: relative;
  display: block;
  padding: 30px;

  h4 {
    margin: 0;
  }

  .list-card-heading {
    display: block;
    padding: 5px 0;
    line-height: 1.3;

    color: $primary-color;
    text-decoration: none;
  }
}

.header-notice {
  background-color: $state-info-bg;
  color: $state-info-text;
}

.omniauth-elixir_aai {
  width: 240px;
}

.omniauth-oidc {
  height: 42px;
}

.affix {
  width: 280px;
  border-right: 1px solid #ccc;
  top: 0;
  z-index: 5;
}


// minor fix of the icon's alignment
.glyphicon-remove {
  top: 3px;
}


.description {
  border: 1px solid lightgrey;
  padding: 18px;
  border-radius: 5px;
  margin: 8px 0;

  h1, h2 {
    font-size: $font-size-large;
    padding-bottom: 8px;
    border-bottom: 1px solid #eee;
  }
  h2 {
    padding-bottom: 6px;
  }
  h3, h4, h5, h6 {
    font-size: $font-size-base;
    padding-bottom: 4px;
  }
}

.filter-heading {
  cursor: pointer;
  color: $primary-color;
}

.filter-heading-active {
  color: $secondary-color;
}

.embedded-content {
  margin: 2em auto;

  iframe {
    display: block;
    margin: auto;
  }
}

.expand-filters {
  text-align: right;
  padding: 7px 20px 7px 20px !important;
  a {
    font-size: $font-size-small;
    color: $gray-light !important;
    cursor: pointer;
  }
}

.bulk-import-row {
  border-bottom: 1px solid #ccc;
  .scraped-metadata p {
    margin: 0;
  }
}

.test-controls {
  padding: 10px;
  display: inline-block;
}

.collapsible-panel-link {
  display: block;
}

#cookie-banner {
  position: fixed;
  bottom: 0;
  width: 100%;
  padding-top: 10px;
  background-color: #eee;
  z-index: 2;

  .btn {
    margin-bottom: 5px;
  }
}

.content-actions {
  gap: 10px;
  display: flex;

  .content-viewer-actions > .btn,
  .content-viewer-actions > .btn-group,
  .content-manager-actions > .btn,
  .content-manager-actions > .btn-group {
    margin-top: 5px; /* So they have some vertical spacing when collapsed on small screens */
  }

  .content-viewer-actions {
    flex-grow: 1;
    text-align: left;
  }

  .content-manager-actions {
    flex-grow: 1;
    text-align: right;
  }
}

